alpm-db/tests/parse_errors/files/snapshots/empty_line_in_list_of_paths.snap
---
source: alpm-db/tests/parse_errors.rs
description: "%FILES%\nusr/\nusr/bin/\n\nusr/bin/foo\n"
expression: error.to_string()
---
Parser failed with the following error:
parse error at line 5, column 1
  |
5 | usr/bin/foo
  | ^
expected no further path after newline
